Added start script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "nodemon -q ."
+    "start-dev": "nodemon -q .",
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
